<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.jefrajames.demo.loom</groupId>
  <artifactId>loom-basic</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>
  <name>Basic Java SE Loom demo</name>

  <parent>
    <groupId>io.jefrajames</groupId>
    <artifactId>loomdemo</artifactId>
    <version>1.0</version>
  </parent>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>20</maven.compiler.source>
    <maven.compiler.target>20</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-util</artifactId>
      <version>11.0.15</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.7</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>1.36</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>--add-exports</arg>
            <arg>java.base/jdk.internal.vm=ALL-UNNAMED</arg>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.concurrent</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>